<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/base"
        >

        <include
            android:id="@+id/include"
            layout="@layout/activity_toolbar"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:background="@color/vert"
            android:gravity="center_horizontal"
            android:text="@string/bts_sn"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"
            android:textColor="@color/black"
            />
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            app:srcCompat="@drawable/sembat"
            android:gravity="center"
            android:layout_gravity="center"
            android:contentDescription="@string/imagesembat"/>

        <Button
            android:id="@+id/buttonGo"
            android:layout_width="244dp"
            android:layout_height="100dp"
            android:background="@color/vertclair"
            android:gravity="center"
            android:text="@string/go"
            android:textSize="50sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            >
        </Button>




    </LinearLayout>


</RelativeLayout>